prototype 1 working version which shows all the data on front end

--- a/index.html
+++ b/index.html
@@ -44,6 +44,58 @@
 			</div>
 		</div>
 		<div class="row">
+			<div class="col-xs-1">
+				Departure
+			</div>
+			<div class="col-xs-1" id="departureData">
+
+			</div>
+			<div class="col-xs-1">
+				Arrival
+			</div>
+			<div class="col-xs-1" id="arrivalData">
+
+			</div>
+			<div class="col-xs-1">
+				Carrier
+			</div>
+			<div class="col-xs-1" id="carrierData">
+
+			</div>
+			<div class="col-xs-2">
+				Total Delay
+			</div>
+			<div class="col-xs-1" id="totalDelayData">
+
+			</div>
+			<div class="col-xs-2">
+				Cancelled (0-No)
+			</div>
+			<div class="col-xs-1" id="cancelData">
+
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-2">
+				Flight Date
+			</div>
+			<div class="col-xs-2" id="flightDateData">
+
+			</div>
+			<div class="col-xs-3">
+				Day of Week (1-Mon) (7-Sun) (9-unknown)
+			</div>
+			<div class="col-xs-1" id="dayOfWeekData">
+
+			</div>
+			<div class="col-xs-2">
+				Distance
+			</div>
+			<div class="col-xs-2" id="distanceData">
+
+			</div>
+		</div>
+		<div class="row">
 			<section id="forceGraph">
 
 			</section>
