implemented multiple selection for carrier which shows up in the graph

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 				Choose Airline to Fly
 			</div>
 			<div class="col-xs-3" >
-				<select id="airFly">
+				<select id="airFly" multiple="multiple">
 
 				</select>
 			</div>
@@ -43,6 +43,11 @@
 
 				</select>
 			</div>
+		</div>
+		<div class="row">
+			<section id="forceGraph">
+
+			</section>
 		</div>
 		<div class="row hideFligtDetails">
 			<div class="col-xs-1">
@@ -96,11 +101,7 @@
 
 			</div>
 		</div>
-		<div class="row">
-			<section id="forceGraph">
-
-			</section>
-		</div>
+		
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
