full working version in which users can select multiple of either carrier or destination for a selected departure airport

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				Choose Destination Airport
 			</div>
 			<div class="col-xs-3" >
-				<select id="destAir">
+				<select id="destAir" multiple="multiple">
 
 				</select>
 			</div>
@@ -49,7 +49,10 @@
 
 			</section>
 		</div>
-		<div class="row hideFligtDetails">
+		<div class="row hideFlightDetails">
+			<center> The below part is for checking the values of test data </center>
+		</div>
+		<div class="row hideFlightDetails">
 			<div class="col-xs-1">
 				Departure
 			</div>
@@ -81,7 +84,7 @@
 
 			</div>
 		</div>
-		<div class="row hideFligtDetails">
+		<div class="row hideFlightDetails">
 			<div class="col-xs-2">
 				Flight Date
 			</div>
