implemented color for source, destination and link nodes and also hover over nodes

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<div class="container">
 		<h2> Optimize Travel </h2>
-		<div class="row">
+		<div class="row row-gap">
 			<div class="col-xs-3">
 				Choose Departure Airport
 			</div>
@@ -24,7 +24,7 @@
 				</select>
 			</div>
 		</div>
-		<div class="row" id="hideCarrier">
+		<div class="row row-gap" id="hideCarrier">
 			<div class="col-xs-3">
 				Choose Airline to Fly
 			</div>
@@ -34,7 +34,7 @@
 				</select>
 			</div>
 		</div>
-		<div class="row" id="hideDestAir">
+		<div class="row row-gap" id="hideDestAir">
 			<div class="col-xs-3">
 				Choose Destination Airport
 			</div>
@@ -44,13 +44,13 @@
 				</select>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row row-gap">
 			<section id="forceGraph">
 
 			</section>
 		</div>
 		<div class="row hideFlightDetails">
-			<center> The below part is for checking the values of test data </center>
+			<center> Travel Data </center>
 		</div>
 		<div class="row hideFlightDetails">
 			<div class="col-xs-1">
@@ -91,14 +91,14 @@
 			<div class="col-xs-2 data-display" id="flightDateData">
 
 			</div>
-			<div class="col-xs-3">
-				Day of Week (1-Mon) (7-Sun) (9-unknown)
+			<div class="col-xs-2">
+				Day of Week 
 			</div>
 			<div class="col-xs-1 data-display" id="dayOfWeekData">
 
 			</div>
 			<div class="col-xs-2">
-				Distance
+				Distance (miles)
 			</div>
 			<div class="col-xs-2 data-display" id="distanceData">
 
